css: fix an alignment issue on the central bd div.
Apparently the width of an element does not include its padding.

--- a/blog/static/css.css
+++ b/blog/static/css.css
@@ -35,11 +35,11 @@ a:link, a:visited {
 }
 
 #bd {
-    padding: 20px;
+    padding: 2%;
     min-height: 500px;
     float: left;
     clear: both;
-    width: 100%;
+    width: 96%;
 }
 
 h1 {
